alignment and style fixes

--- a/_sass/components/_strip.scss
+++ b/_sass/components/_strip.scss
@@ -82,8 +82,5 @@
       color: $steel;
     }
   }
-  &.about {
-    text-align: center;
-  }
 }
 
